Changed navbar and styled the mobile version of the index page

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,9 +1,29 @@
 <% include ./partials/header %>
 
 
-<main>
-    <h1 class="blogs">Blogs</h1>
-</main>
+    <main class="home">
+        <section class="index-banner">
+            <div class="vertical-center">
+                <h1>MeBlog</h1>
+                <p>A creative and collaborative outlet for indivuals to share their ideas</p>
+            </div>
+        </section>
     
+        <section class="index-boxes">
+            <div class="index-boxlink-square">
+                <a href="#">Portfolio</a>
+            </div>
+            <div class="index-boxlink-rectangle">
+                <a href="#">Github</a>
+            </div>
+            <div class="index-boxlink-rectangle">
+                <a href="#">About</a>
+            </div>
+            <div class="index-boxlink-square">
+                <a href="#">Contact</a>
+            </div>
+        </section>
+    </main>
+
 
 <% include ./partials/footer %>
