--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -2,25 +2,19 @@
 <html>
     <head>
         <title>MeBlog</title>
+        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
         <link rel="stylesheet" href="/css/app.css">
     </head>
     <body>
+        
     <header>
-        
-        <h1 class="brand"><a href="/">MeBlog</a></h1>
-        <input type="checkbox" id="nav-toggle" class="nav-toggle">
-        
+        <a class="header-brand" href="/"><i class="fab fa-blogger-b"></i>MeBlog</a>
         <nav>
             <ul class="navbar">
                 <li><a href="/" id="home">Home</a></li>
-                <li><a href="/about" id="about">About</a></li>
-                <li><a href="/blogs" id="blogs">Blogs</a></li>
-                <li><a href="/contact" id="contact">Contact</a></li>
+                <li><a href="/" id="about">About</a></li>
+                <li><a href="/" id="blogs">Blog</a></li>
+                <li><a href="/" id="contact">Contact</a></li>
             </ul>
         </nav>
-        
-        <label for="nav-toggle" class="nav-toggle-label">
-            <span></span>
-        </label>
-        
     </header>
