--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,153 +1,136 @@
 @import url("https://fonts.googleapis.com/css?family=IBM+Plex+Sans:100,400,700");
 :root {
-  --background: rgba(85, 214, 170, 0.85); }
+  --backgroundDark: #f2f2f2;
+  --fontLight: #111; }
 
 html {
   box-sizing: border-box; }
 
 *, *::before, *::after {
-  box-sizing: inherit; }
+  box-sizing: inherit;
+  margin: 0;
+  padding: 0;
+  text-decoration: none; }
 
 body {
-  margin: 0;
-  background: #222;
+  color: var(--fontLight);
   font-family: "IBM Plex Sans", sans-serif;
   font-weight: 400; }
 
-.brand a {
-  text-decoration: none;
-  color: inherit; }
+.fa-blogger-b {
+  margin-right: 6px;
+  font-size: 90%; }
 
-header {
-  background: var(--background);
+header .header-brand {
+  font-weight: 700;
+  font-size: 2.5rem;
+  color: var(--fontLight);
+  display: block;
+  margin: 0 auto;
   text-align: center;
-  position: fixed;
-  z-index: 999;
-  width: 100%; }
+  padding: 20px 0 5px; }
 
-nav {
-  position: absolute;
-  text-align: left;
-  top: 100%;
-  left: 0;
-  background: var(--background);
-  width: 100%;
-  transform: scale(1, 0);
-  transform-origin: top;
-  transition: transform 400ms ease-in-out; }
-
-nav ul {
-  margin: 0;
-  padding: 0;
+header nav ul {
   list-style: none; }
 
-nav li {
-  margin-bottom: 1em;
-  margin-left: 1em; }
+header nav ul li {
+  width: 100%;
+  text-align: center; }
 
-nav a {
+header nav ul li a {
+  display: block;
+  padding: 15px 0;
+  height: 100%;
+  font-weight: normal;
+  font-size: 1.3rem;
+  color: var(--fontLight);
+  transition: all 0.3s ease-in-out; }
+
+header nav ul a:hover {
+  background: #2f2f2f;
   color: white;
-  text-decoration: none;
-  font-size: 1.2rem;
-  text-transform: uppercase;
-  opacity: 0;
-  transition: opacity 150ms ease-in-out; }
+  transition: all 0.3s ease-in-out; }
 
-nav a:hover {
-  color: #000; }
+main {
+  color: white; }
 
-.nav-toggle {
+.index-banner {
+  width: 100%;
+  height: calc(100vh - 100px);
+  background-image: url("https://images.pexels.com/photos/261577/pexels-photo-261577.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  display: table; }
+
+.vertical-center {
+  display: table-cell;
+  vertical-align: middle; }
+
+.index-banner h1 {
+  font-size: 5.5rem;
+  text-align: center;
+  text-shadow: 2px 2px 8px #111; }
+
+.index-banner p {
+  font-size: 2rem;
+  text-align: center;
+  text-shadow: 2px 2px 8px #111;
+  line-height: 3rem; }
+
+.index-boxes div {
+  margin: 30px;
+  width: calc(100% - 60px);
+  height: 150px;
+  background: var(--backgroundDark);
+  color: black;
+  box-shadow: 0px 0.5px 0.5px 3px rgba(0, 0, 0, 0.1);
+  display: table; }
+
+.index-boxes div a {
+  font-weight: 500;
+  font-size: 2.5rem;
+  color: black;
+  text-align: center;
+  display: table-cell;
+  vertical-align: middle;
+  transition: all 0.2s ease-in-out; }
+
+.index-boxes div a:hover {
+  background: #2f2f2f;
+  color: white;
+  transition: all 0.2s ease-in-out; }
+
+footer {
+  padding: 40px;
+  margin-top: 20px;
+  background: #2f2f2f;
+  color: white;
+  font-size: 1.5rem;
+  display: flex;
+  justify-content: space-around; }
+
+footer .footer-navigation li:first-child {
+  font-weight: 600; }
+
+footer .footer-navigation {
+  flex: 0.4; }
+
+footer li, footer a {
+  line-height: 50px;
+  color: white; }
+
+footer ul li {
+  list-style: none; }
+
+footer .footer-projects {
   display: none; }
 
-.nav-toggle:checked ~ nav {
-  transform: scale(1, 1); }
-
-.nav-toggle:checked ~ nav a {
-  opacity: 1;
-  transition: opacity 250ms ease-in-out 250ms; }
-
-.nav-toggle-label {
-  position: absolute;
-  top: 0;
-  left: 0;
-  margin-left: 1em;
-  height: 100%;
+footer .footer-social {
   display: flex;
-  align-items: center; }
-
-.nav-toggle-label span,
-.nav-toggle-label span::before,
-.nav-toggle-label span::after {
-  display: block;
-  background: white;
-  height: 2px;
-  width: 1.5em;
-  border-radius: 2px;
-  position: relative; }
-
-.nav-toggle-label span::before,
-.nav-toggle-label span::after {
-  content: "";
-  position: absolute; }
-
-.nav-toggle-label span::before {
-  bottom: 7px; }
-
-.nav-toggle-label span::after {
-  top: 7px; }
-
-@media screen and (min-width: 800px) {
-  .nav-toggle-label {
-    display: none; }
-
-  header {
-    display: grid;
-    grid-template-columns: 1fr auto minmax(600px, 3fr) 1fr; }
-
-  .brand {
-    grid-column: 2/ span 1; }
-
-  nav {
-    all: unset;
-    grid-column: 3 / 4;
-    display: flex;
-    justify-content: flex-end;
-    align-items: center; }
-
-  nav a {
-    opacity: 1;
-    position: relative; }
-
-  nav a::before {
-    content: "";
-    display: block;
-    height: 5px;
-    background: black;
-    position: absolute;
-    top: -0.75em;
-    left: 0;
-    right: 0;
-    transform: scale(0, 1);
-    transform-origin: left;
-    transition: transform ease-in-out 250ms; }
-
-  nav a:hover::before {
-    transform: scale(1, 1); }
-
-  nav ul {
-    display: flex;
-    justify-content: flex-end; }
-
-  nav li {
-    margin-left: 3em;
-    margin-bottom: 0; } }
-h1.home {
-  margin: 0; }
-
-h1.blogs {
-  margin: 0;
-  position: absolute;
-  left: 100px;
-  top: 100px; }
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: flex-end;
+  font-size: 7rem; }
 
 /*# sourceMappingURL=app.css.map */
