--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,2 +1,25 @@
+    <footer>
+        <ul class="footer-navigation">
+            <li>Navigation</li>
+            <hr>
+            <li><a href="/">Home</a></li>
+            <li><a href="/">About</a></li>
+            <li><a href="/">Blog</a></li>
+            <li><a href="/">Portfolio</a></li>
+            <li><a href="/">Contact</a></li>
+        </ul>
+        <ul class="footer-projects">
+            <li >Latest Projects</li>
+            <li><a href="/">...</a></li>
+            <li><a href="/">...</a></li>
+            <li><a href="/">...</a></li>
+            <li><a href="/">...</a></li>
+        </ul>
+        <div class="footer-social">
+            <a href="/"><i class="fab fa-linkedin"></i></a>
+            <a href="/"><i class="fab fa-github"></i></a>
+        </div>
+    </footer>
+    
     </body>
 </html>
