--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -3,22 +3,22 @@
             <li>Navigation</li>
             <hr>
             <li><a href="/">Home</a></li>
-            <li><a href="/">About</a></li>
-            <li><a href="/">Blog</a></li>
-            <li><a href="/">Portfolio</a></li>
-            <li><a href="/">Contact</a></li>
+            <li><a href="/about">About</a></li>
+            <li><a href="/blogs">Blog</a></li>
+            <li><a href="/portfolio">Portfolio</a></li>
+            <li><a href="/contact">Contact</a></li>
         </ul>
         <ul class="footer-projects">
             <li >Latest Projects</li>
             <hr>
-            <li><a href="/">...</a></li>
-            <li><a href="/">...</a></li>
-            <li><a href="/">...</a></li>
-            <li><a href="/">...</a></li>
+            <li><a href="/">MeBlog</a></li>
+            <li><a href="/">YelpCamp</a></li>
+            <li><a href="/">Patatap Clone</a></li>
+            <li><a href="/">Color Game</a></li>
         </ul>
         <div class="footer-social">
-            <a href="/"><i class="fab fa-linkedin"></i></a>
-            <a href="/"><i class="fab fa-github"></i></a>
+            <a href="https://www.linkedin.com/in/choi-mike/" target="_blank"><i class="fab fa-linkedin"></i></a>
+            <a href="https://github.com/mikec-git" target="_blank"><i class="fab fa-github"></i></a>
         </div>
     </footer>
     
