--- a/public/css/app.scss
+++ b/public/css/app.scss
@@ -67,7 +67,11 @@ header nav ul a:hover{
     transition: all 0.3s ease-in-out;
 }
 
-@media only screen and (min-width: 800px) {
+// -------------------------------
+// Media query for Desktop screens
+// -------------------------------
+
+@media only screen and (min-width: 900px) {
     header {
         display: grid;
         grid-template-columns: auto 1fr 2fr ;
@@ -84,9 +88,8 @@ header nav ul a:hover{
     
     header nav ul {
         display: grid;
-        grid-template-columns: repeat(4, auto);
+        grid-template-columns: repeat(5, auto);
         height: 100%;
-        padding-left: 20px;
     }
     
     header nav ul li {
@@ -101,15 +104,149 @@ header nav ul a:hover{
     }
     
     .index-boxes {
+        margin-top: 20px;
         display: flex;
+        flex-wrap: wrap;
+        flex-direction: row;
+        justify-content: center;
     }
     
-    .index-boxlink-square {
-        // width: ;
+    section div.index-boxlink-square {
+        width: 20%;
+    }
+
+    section div.index-boxlink-rectangle {
+        width: 50%; 
+    }
+    
+    main.about .about-section {
+        all: unset;
+        color: var(--fontLight);
+        display: grid;
+        grid-template-areas: 
+            "photo . photoText photoText"
+            "photo . paragraph paragraph"
+            "photo . paragraph paragraph";
+        grid-template-columns: 1.5fr 0.05fr 1fr 1fr;
+        margin: 0.5rem 3rem 2rem;
+        justify-content: center;
+        align-items: center
+    }
+    
+    section div.about-photo {
+        all: unset;
+        grid-area: photo;
+        img {
+            width: 100%;
+            margin: 20px 20px 20px 2px;
+            box-shadow: 0px 2px 4px 2px #111;
+            padding: 0;
+        }
+    }
+    
+    section div.about-photo-text {
+        all: unset;
+        grid-area: photoText;
+        font-size: 2rem;
+        
+        h1 {
+            margin: 10px 20px 0;
+        }
+        
+        hr {
+            margin-left: 20px;
+        }
+    }
+    
+    section div.about-paragraph {
+        all: unset;
+        grid-area: paragraph;
+        padding: 0 20px;
+        font-size: 1.4rem;
+    }
+    
+    .contact {
+        padding: 0 20%;
+        margin: 0 auto;
+        .contact-info {
+            width: 100%;
+        }
+        
+        form {
+            display: grid !important;
+            grid-template-areas: 
+                "name    detail"
+                "email   detail"
+                "btn     btn";
+            grid-template-columns: 1fr 2fr;
+            grid-template-rows: 2fr 2fr 1fr;
+            justify-items: center;
+            grid-gap: 5px;
+            box-shadow: 0px 2px 5px rgba(0,0,0,0.3);
+            border-radius: 10px;
+            
+            input[type="text"] {
+                grid-area: name;
+                width:100%;
+            }
+            
+            input[type="email"] {
+                width:100%;
+                grid-area: email;
+            }
+            
+            textarea {
+                width:100%;
+                grid-area: detail;
+                padding-top:125px;
+            }
+            
+            button {
+                grid-area: btn;
+                width: 100%;
+                border-radius: 10px;
+            }
+        }
+        
+    }
+    
+    
+    footer {
+        padding: 20px !important;
+        
+        li {
+            line-height: 45px !important;
+        }
+        
+        a {
+            line-height: 25px !important; 
+        }
+    }
+
+    footer ul, footer div {
+        font-size: 1rem;
+    }
+    
+    footer ul.footer-navigation {
+        display: block;
+        width: 25vw;
     }
     
     footer ul.footer-projects {
         display: block;
+        width: 30vw;
+        margin: 0 5px;
+    }
+    
+    footer div.footer-social {
+        display: flex;
+        flex-direction: row;
+        justify-content: flex-end;
+        align-items: center;
+    }
+    
+    .footer-social a {
+        margin-left: 10%;
     }
 }
 
@@ -122,7 +259,7 @@ main {
 }
 
 // --------------
-// Index styling
+// Home styling
 // --------------
 
 .index-banner {
@@ -180,6 +317,279 @@ main {
 }
 
 // --------------
+// Blogs styling
+// --------------
+
+.blogs-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    
+    .blogs-header {
+        text-align: center;
+        font-size: 3rem;
+    }
+    
+    .btn.new-blog {
+        color: var(--fontLight);
+        font-weight: 600;
+        font-size: 1.2rem;
+        border: 2px solid var(--fontLight);
+        background: white;
+        border-radius: 5px;
+        padding: 5px;
+        margin: 20px auto 10px;
+        
+    }
+    
+    .new-blog:hover {
+        color: white;
+        background: var(--fontLight);
+        transition: all 0.4s ease-in-out;
+    }
+    
+    .blogs-divided {
+        display: block;
+        width: 95%;
+        max-width: 1000px;
+        padding: 10px;
+    }
+    
+    .each-blog {
+        padding: 10px 10px 30px;
+        margin: 10px 10px 20px;
+        border: 2px solid var(--fontLight);
+        border-radius: 5px;
+        
+        h1 {
+            color: var(--fontLight);
+            position: relative;
+            left: 50%;
+            width: 90%;
+            margin: 0 calc(-90% / 2);
+            font-size: 2.5rem;
+        }
+        
+        img {
+            position: relative;
+            left: 50%;
+            width: 90%;
+            margin: 0 calc(-90% / 2);
+            margin-top: 10px;
+            border-radius: 5px;
+        }   
+        
+        p {
+            font-size: 1.5rem;
+            position: relative;
+            left: 50%;
+            width: 90%;
+            margin: 0 calc(-90% / 2);
+            
+        }
+        
+        p:nth-of-type(2) {
+            margin-bottom: 20px;
+        }
+        
+        p.blog-date {
+            font-weight: 600;
+        }
+        
+        .blog-delete {
+            border: none;
+            background: white;
+        }
+        
+        a.blog-edit, .blog-delete {
+            color: var(--fontLight);
+            font-size: 1.3rem;
+            border: 2px solid var(--fontLight);
+            border-radius: 3px;
+            padding: 7px 14px;
+            margin: 0 10px 0 5%;
+        }
+        
+        a.blog-edit:hover, .blog-delete:hover, .read-more:hover {
+            color: white;
+            background: var(--fontLight);
+            transition: all 0.4s ease-in-out;
+        }
+        
+        .blog-buttons {
+            display: flex;
+        }
+        
+        .read-more {
+            color: var(--fontLight);
+            font-size: 1.3rem;
+            border: 2px solid var(--fontLight);
+            border-radius: 3px;
+            padding: 7px 14px;
+            margin: 0 10px 0 5%;
+        }
+    }
+}
+
+// -----------------
+// New blog styling
+// -----------------
+
+.new-blog {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    
+    h1 {
+        text-align: center;
+    }
+    
+    form {
+        box-shadow: 0px 2px 5px rgba(0,0,0,0.3);
+        width: 80%;
+        padding: 15px;
+    }
+    
+    form > div{
+        font-size: 1.3rem;
+        display: flex;
+        flex-direction: column;
+
+        label {
+            margin-top: 15px;
+        }
+
+        input, textarea {
+            border: none;
+            padding: 15px 20px;
+            background: #EEE;
+            transition: all 0.5s linear;
+            font-size: 1.3rem;
+            font-family: inherit;
+        }
+    }
+    
+    .blog-submit {
+        text-transform: uppercase;
+        font-weight: 600;
+        font-size: 1.1rem;
+        width: 7rem;
+        height: 2.25rem;
+        background: #EEE;
+        border: none;
+        margin-top: 10px;
+    }
+    
+    .blog-submit:hover {
+        background: var(--fontLight);
+        color: white;
+        transition: all 0.4s ease-in-out;
+    }
+}
+
+// --------------
+// About styling
+// --------------
+
+.about .about-section {
+    color: var(--fontLight);
+    display: grid;
+    grid-template-areas: 
+        "about-photo-text"
+        "about-photo"
+        "about-paragraph";
+    justify-content: center;
+    align-items: center;
+    overflow: hidden;
+}
+
+.about-photo {
+    grid-area: about-photo;
+    
+    img {
+        width: 100vw;
+    }
+}
+
+.about-photo-text {
+    margin-top: 2rem;
+    font-size: 1.5rem;
+    text-align: center;
+    grid-area: about-photo-text;
+    
+    hr {
+        margin: 0 10px 20px;
+    }
+}
+
+.about-paragraph {
+    grid-area: about-paragraph;
+    font-size: 1.2rem;
+    margin: 0 5px;
+    padding: 20px;
+}
+
+// ----------------
+// Contact styling
+// ----------------
+
+.contact {
+    color: var(--fontLight);
+    margin: 20px;
+}
+
+.contact-info {
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    box-shadow: 0px 2px 5px rgba(0,0,0,0.3);
+    
+    .contact-header {
+        font-size: 2rem;
+        font-weight: 700;
+    }
+    
+    form {
+        display: flex;
+        flex-direction: column;
+        margin: 10px 30px;
+        padding: 5px;
+    }
+    
+    input, textarea {
+        border-radius: 20px;
+        margin: 2px 0;
+        border: none;
+        text-align: center;
+        resize: none;
+        padding: 10px;
+        font-family: inherit;
+        transition: all 0.5s linear;
+    }
+    
+    textarea {
+        padding-top: 90px;
+    }
+    
+    button {
+        border: none;
+        font-size: 1.3rem;
+        font-weight: 600;
+        text-transform: uppercase;
+        padding: 20px;
+    }
+    
+    button:hover {
+        background: #2f2f2f;
+        color: white;
+        transition: all 0.3s ease-in-out;
+    }
+}
+
+
+
+
+// --------------
 // Footer styling
 // --------------
 
@@ -193,12 +603,13 @@ footer {
     justify-content: space-around;
 }
 
-footer .footer-navigation li:first-child {
+footer .footer-navigation li:first-child,
+footer .footer-projects li:first-child {
     font-weight: 600;
 }
 
 footer .footer-navigation {
-    flex: 0.4;
+    
 }
 
 footer li, footer a {
