--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -12,9 +12,10 @@
         <nav>
             <ul>
                 <li><a href="/" id="home">Home</a></li>
-                <li><a href="/" id="about">About</a></li>
-                <li><a href="/" id="blogs">Blog</a></li>
-                <li><a href="/" id="contact">Contact</a></li>
+                <li><a href="/about" id="about">About</a></li>
+                <li><a href="/portfolio" id="portfolio">Portfolio</a></li>
+                <li><a href="/blogs" id="blogs">Blog</a></li>
+                <li><a href="/contact" id="contact">Contact</a></li>
             </ul>
         </nav>
     </header>
