Added final anchor tag links

--- a/views/app.ejs
+++ b/views/app.ejs
@@ -11,7 +11,7 @@
     
         <section class="index-boxes">
             <div class="index-boxlink-square">
-                <a href="/portfolio">Portfolio</a>
+                <a href="https://github.com/mikec-git" target="_blank">Portfolio</a>
             </div>
             <div class="index-boxlink-rectangle">
                 <a href="https://github.com/mikec-git" target="_blank">Github</a>
