--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -5,16 +5,16 @@
             <li><a href="/">Home</a></li>
             <li><a href="/about">About</a></li>
             <li><a href="/blogs">Blog</a></li>
-            <li><a href="/portfolio">Portfolio</a></li>
+            <li><a href="https://github.com/mikec-git" target="_blank">Portfolio</a></li>
             <li><a href="/contact">Contact</a></li>
         </ul>
         <ul class="footer-projects">
             <li >Latest Projects</li>
             <hr>
-            <li><a href="/">MeBlog</a></li>
-            <li><a href="/">YelpCamp</a></li>
-            <li><a href="/">Patatap Clone</a></li>
-            <li><a href="/">Color Game</a></li>
+            <li><a href="https://github.com/mikec-git/MeBlog" target="_blank">MeBlog</a></li>
+            <li><a href="https://github.com/mikec-git/YelpCamp" target="_blank">YelpCamp</a></li>
+            <li><a href="https://github.com/mikec-git/Patatap-Clone" target="_blank">Patatap Clone</a></li>
+            <li><a href="https://github.com/mikec-git/Color-Game" target="_blank">Color Game</a></li>
         </ul>
         <div class="footer-social">
             <a href="https://www.linkedin.com/in/choi-mike/" target="_blank"><i class="fab fa-linkedin"></i></a>
