--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -13,7 +13,7 @@
             <ul>
                 <li><a href="/" id="home">Home</a></li>
                 <li><a href="/about" id="about">About</a></li>
-                <li><a href="/portfolio" id="portfolio">Portfolio</a></li>
+                <li><a href="https://github.com/mikec-git" id="portfolio" target="_blank">Portfolio</a></li>
                 <li><a href="/blogs" id="blogs">Blog</a></li>
                 <li><a href="/contact" id="contact">Contact</a></li>
             </ul>
